add more mock reading data in data init